RESOLVED FIXED 109438
[EFL][WKTR] Regression(r141836) fast/dom/Window/mozilla-focus-blur.html started failing
https://bugs.webkit.org/show_bug.cgi?id=109438
Summary [EFL][WKTR] Regression(r141836) fast/dom/Window/mozilla-focus-blur.html start...
Chris Dumez
Reported 2013-02-11 07:51:30 PST
After <http://trac.webkit.org/changeset/141836>, fast/dom/Window/mozilla-focus-blur.html started failing with the following diff: --- /home/buildslave-1/webkit-buildslave/efl-linux-64-release-wk2/build/layout-test-results/fast/dom/Window/mozilla-focus-blur-expected.txt +++ /home/buildslave-1/webkit-buildslave/efl-linux-64-release-wk2/build/layout-test-results/fast/dom/Window/mozilla-focus-blur-actual.txt @@ -6,6 +6,6 @@ PASS: The focus should not have been changed! PASS: The focus should not have been changed with URL=data:text/html,<script>opener.focus();opener.postMessage("", "*");</script> PASS: The focus should not have been changed with URL=data:text/html,<script>blur();opener.postMessage("", "*");</script> -PASS: The last opened window should be able to get focus +FAIL: The last opened window should be able to get focus PASS: All tests finished I'll upload a patch soon as I know already what the problem is.
Attachments
Patch (1.92 KB, patch)
2013-02-11 07:58 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2013-02-11 07:58:53 PST
Chris Dumez
Comment 2 2013-02-11 08:08:42 PST
Comment on attachment 187574 [details] Patch Clearing flags on attachment: 187574 Committed r142477: <http://trac.webkit.org/changeset/142477>
Chris Dumez
Comment 3 2013-02-11 08:08:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.